--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,10 +1,10 @@
 header {
   height: 100vh;
   padding-top: 7rem;
-  overflow: hidden;
+  margin-bottom: 20rem;
 }
 
-.header-container {
+.header_container {
   text-align: center;
   height: 100%;
   position: relative;
@@ -38,10 +38,49 @@ header {
 
 /* ============IMAGE ME========== */
 .me {
-  /* background-color: var(--color-primary); */
+  /* background: linear-gradient(var(--color-primary), transparent); */
   width: 22rem;
   height: 30rem;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  left: calc(50% - 11rem);
+  margin-top: 4rem;
+  /* border-radius: 22rem 22rem 0 0; */
+  overflow: hidden;
+  padding: 5rem 1.5rem 1.5rem 1.5rem;
+}
+
+.me img {
+  margin-bottom: 5rem;
+}
+
+/* =========SCROLL DOWN========== */
+.scroll-down {
+  position: absolute;
+  right: -2.3rem;
+  bottom: 5rem;
+  transform: rotate(90deg);
+  font-weight: 300;
+  font-size: 0.9rem;
+}
+
+/* =====MEDIA QUERIES (TABLETS)======== */
+@media screen and (max-width: 1024px) {
+  header {
+    height: 100vh;
+  }
+}
+
+/* =====MEDIA QUERIES (MOBILES)======== */
+@media screen and (max-width: 600px) {
+  header {
+    height: 100vh;
+  }
+
+  .socials,
+  .scroll-down {
+    display: none;
+  }
+  section {
+    margin-top: 1.3rem;
+  }
 }
