--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -36,7 +36,7 @@
 @media screen and (max-width: 1024px) {
   .portfolio-container {
     grid-template-columns: 1fr 1fr;
-    display: 1.2rem;
+    gap: 1.2rem;
   }
 }
 
@@ -44,6 +44,6 @@
 @media screen and (max-width: 600px) {
   .portfolio-container {
     grid-template-columns: 1fr;
-    gap: 1fr;
+    gap: 1rem;
   }
 }
